packages/beynac/src/test-utils/source/__fixtures__/errors/bad-contracts-import.ts
import { BaseClass } from "../../../../utils.ts";
import { Something } from "../contracts.ts";

export class MyClass extends BaseClass {
	value = Something;
}
